--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,3 +1,59 @@
 footer {
-  margin: 0 max(20px, 7.5%) 40px max(20px, 7.5%);
+  margin: 0 max(20px, 7.5%) 0 max(20px, 7.5%);
+  padding-bottom: 40px;
+}
+
+.footer-info-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-title {
+  margin: auto 0 10px 0;
+}
+.footer-info-container > p:nth-child(3) {
+  margin-top: 15px;
+}
+.phone-number {
+  margin-top: 15px;
+}
+
+.email {
+  margin-top: 5px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  text-align: start;
+  line-height: 1;
+}
+
+.phone-number,
+.email p {
+  justify-self: center;
+}
+
+footer .social-links {
+  margin-top: 30px;
+  align-self: start;
+  justify-content: start;
+}
+
+footer .social-links img {
+  width: 20px;
+  height: auto;
+}
+
+@media (max-width: 1104px) {
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-title {
+    text-align: center;
+  }
+  footer .social-links {
+    justify-content: center;
+    align-items: center;
+  }
 }
