--- a/src/styles/my-work.css
+++ b/src/styles/my-work.css
@@ -5,21 +5,26 @@
 }
 
 .my-work-container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 40px;
   padding: 20px 0 20px 0;
 }
 
 .my-work-content {
-  width: 33%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .my-work-img {
+  object-fit: contain;
   width: 100%;
   height: auto;
-  object-fit: fill;
+}
+
+.my-work-img img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
