--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,12 @@
   font-family: "Playfair-Display", serif;
 }
 
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+
 button {
   outline: none;
   background-color: transparent;
